--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -87,6 +87,8 @@
     "thread": "cpp",
     "typeindex": "cpp",
     "typeinfo": "cpp",
-    "variant": "cpp"
+    "variant": "cpp",
+    "__split_buffer": "cpp",
+    "queue": "cpp"
   }
 }
